--- a/pipeline/tasks/deploy.yml
+++ b/pipeline/tasks/deploy.yml
@@ -23,6 +23,8 @@ params:
   vm_password:
   vm_type_micro:
   vm_type_small:
+  disk_type_micro:
+  disk_type_small:
   nginx_ip:
   pcf_sys_domain:
   pcf_ert_domain:
